package app.entities;

public class CarportRequest {
    private int carportRequestID;
    private User user;
    private Carport carport;
    private User salesRep;
}
