package app.entities;

public class Product {
    private int productID;
    private String name;
    private String dimensions;
    private String description;
    private float price;
    private int type;


}
