package app.entities;

public class ProductInOrder {
}
