@startuml
!pragma layout smetana

skinparam packageStyle rectangle
skinparam classAttributeIconSize 0

title Simplified System Architecture Diagram

' --------------------------------------------------------------------
' LAYERS
' --------------------------------------------------------------------

package "Application Layer" {
    class Main
    class App
}

package "Configuration" {
    class ThymeleafConfig
}

package "Controllers" {
    class UserController
    class SpecificationController
    class CarportController
    class OrderController
    class ProductController
    class RequestController
    class CartController
}

package "Persistence" {
    class ConnectionPool
    class OrderMapper
    class SpecificationMapper
    class UserMapper
    class CarportMapper
    class ProductMapper
    class CarportRequestMapper
    class ProductInOrderMapper
}

package "Entities" {
    abstract class Carport
    class StandardCarport
    class UserDefinedCarport

    class Order
    class Product
    class User
    class Admin
    class Specification
    class CarportRequest
    class ProductInOrder
}

package "Utilities" {
    class FileIO
    class JakartaMail
}

package "Errors" {
    class DatabaseException
    class FileException
}

' --------------------------------------------------------------------
' HIGH-LEVEL RELATIONSHIPS (cleaned)
' --------------------------------------------------------------------

Main --> App

App --> Controllers
App --> ThymeleafConfig

Controllers --> Persistence
Persistence --> Entities

Utilities --> Controllers
Errors --> Persistence
Errors --> Utilities

' --------------------------------------------------------------------
' Entities
' --------------------------------------------------------------------
Carport *--right- Specification
Order -down-* Product
' --------------------------------------------------------------------
' KEY INHERITANCE ONLY (kept simple)
' --------------------------------------------------------------------

Carport <|-- StandardCarport
Carport <|-- UserDefinedCarport
User <|-- Admin

@enduml
